* Fix crash when calling entity:test_obstacles() on an unloaded map.
* Fix crash when opening a chest with a missing treasure dialog (#1089).
* Fix joypad deadzone issue (#672) by strycore.
* Fix compilation error with Clang 3.9 in SNES_SPC.
* Fix possible compilation error when HAVE_UNISTD_H has no value (#1084).
* Fix hero:on_movement_changed() not called (#1095).
* Fix scripts failing to load if a directory exists with the same name (#1100).
* Improve Lua error messages.

Solarus launcher GUI changes
----------------------------

* Clear the console when a quest is started.

Lua API changes
---------------

Changes that do not introduce incompatibilities:

* Add a shader API.
* Video mode functions are now deprecated. Use shader functions instead.
* Add a function sol.main.get_quest_version() (#1058) by Nate-Devv.
* Add a function sol.main.get_resource_ids() to get the resource lists (#959).
* Add abilities push, grab and pull to game:get/set_ability() (#788).
* Add methods entity:get_property() and entity:set_property() (#1094).
* Add methods entity:get_properties() and entity:set_properties() (#1144).
* Add methods entity:get_layer() and entity:set_layer().
* Add methods enemy:get/set_attacking_collision_mode() (#1066).
* Add a method sprite:get_frame_src_xy() (#1093).
* sprite:get_num_frames() can now optionally take an animation and direction.
* sprite:get_frame_delay() can now optionally take an animation.
* sprite:get_size() can now optionally take an animation and direction.
* sprite:get_origin() can now optionally take an animation and direction.
* Add a method surface:get_pixels() (#452).
* Add a method surface:set_pixels() (#466) by stdgregwar.
* Add method get_angle() to more movement types (#1122) by stdgregwar.

Data files format changes
-------------------------

* Maps: add support of custom properties for entities (#1094).
* Maps: add property tileset to tiles and dynamic tiles (#1174). 
* Tilesets: add support of border sets (autotiles) (#1069).