@@ -22,6 +22,7 @@ Engine changes
 * Fix compilation error with Clang 3.9 in SNES_SPC.
 * Fix possible compilation error when HAVE_UNISTD_H has no value (#1084).
 * Fix hero:on_movement_changed() not called (#1095).
+* Fix hero shield sprite directions in animation sword (#1185).
 * Fix scripts failing to load if a directory exists with the same name (#1100).
 * Improve Lua error messages.
 
